--- a/index.css
+++ b/index.css
@@ -10,6 +10,12 @@ h2.center-top {
 body{ 
 
     margin: auto; 
-    width: 720px; 
+    width: 800px; 
     padding: 40px; 
+}
+
+.topleft {
+    position: absolute;
+    top: 110px;
+    font-size: 20px;
 }
