--- a/index.css
+++ b/index.css
@@ -18,4 +18,26 @@ body{
     position: absolute;
     top: 110px;
     font-size: 20px;
+    font-weight: bold;
+}
+
+.topRight {
+    position: relative;
+    right: -600px;
+    top: -140px;
+    font-weight: bold;
+    font-size: 20px;
+}
+
+.countrylist{
+
+    position: absolute; 
+    bottom: 400px; 
+    font-weight: bold;
+}
+
+.list{
+
+    position: absolute; 
+    bottom: 375px;
 }
