--- a/index_layout.css
+++ b/index_layout.css
@@ -1,9 +1,16 @@
 @charset "utf-8";
 
+
+*{ 
+    margin: 0; 
+    padding: 0; 
+    box-sizing: border-box; 
+}
+
 body{
     display: grid; 
-    grid-template-columns: 1fr 3 fr; 
-    grid-template-columns: 1 fr 3 fr; 
+    grid-template-columns: 1fr 3fr; 
+    grid-template-columns: 1fr 3fr; 
     grid-template-rows: 100px 1fr; 
     grid-template-areas: 
         "header header"
@@ -47,24 +54,32 @@ form {
 .topRight {
 
     grid-row: 1 / span 1;
-    grid-column: 3 / span 1;
-    justify-self: center;
+    grid-column: 2 / span 1;
+    justify-self: left;
     align-self: center;
-    text-align: right;
+    
 }
 
 #flagImg { 
-    grid-column: 1 / span 2;
+    grid-column: 1 / span 1;
     grid-row: 2 / span 1;
 }
 
 #populationDisplay {
 
+    grid-row: 2 / span 1;
+    grid-column: 2 / span 1;
     width: 100%;
 }
 
 #aUnitSelection {
     width: 100%; 
+}
+
+#popDen {
+    grid-row: 4 / span 1;
+    grid-column: 3 / span 1;
+    width: 100%;
 }
 
 #areaDisplay {
