--- a/index_layout.css
+++ b/index_layout.css
@@ -15,13 +15,17 @@
 
 body{
     display: grid; 
-    grid-template-columns: 1fr 3fr; 
-    grid-template-columns: 1fr 3fr; 
+    grid-template-columns: 1fr 3fr;  
     grid-template-rows: 100px 1fr; 
     grid-template-areas: 
         "header header"
         "sidebar content";
     height: 100vh;
+    font-family: Arial, Helvetica, sans-serif; 
+    font-size: 16px; 
+    line-height: 1.5; 
+    color: #333; 
+    background-color: #f8f8f8;
 
 }
 
