--- a/index_layout.css
+++ b/index_layout.css
@@ -29,6 +29,15 @@ body{
 
 }
 
+header {
+    grid-area: header; 
+    display: flex; 
+    justify-content: center;
+    align-items: center;
+    background-color: #0077ff;
+    color: #fff;
+}
+
 .center-top {
     grid-area: header; 
     text-align: center; 
