--- a/index_layout.css
+++ b/index_layout.css
@@ -4,3 +4,8 @@ body{
     font-family: Arial, Helvetica, sans-serif; 
     font-size: 16px; 
 }
+
+h2.center-top {
+    text-align: center; 
+    margin-top: 50px; 
+}
