--- a/index_layout.css
+++ b/index_layout.css
@@ -15,3 +15,10 @@ label.countrylist {
     display: block; 
     margin-bottom: 10px;
 }
+
+select.list {
+    padding: 10px; 
+    font-size: 16px; 
+    border-radius: 5px; 
+    border: 1px solid #ccc; 
+}
