style for the country info label

--- a/index_layout.css
+++ b/index_layout.css
@@ -22,3 +22,9 @@ select.list {
     border-radius: 5px; 
     border: 1px solid #ccc; 
 }
+
+label.topleft {
+    font-weight: bold; 
+    display: block; 
+    margin-top: 20px; 
+}
