--- a/index_layout.css
+++ b/index_layout.css
@@ -46,3 +46,11 @@ label.topRight {
     max-width: 200px; 
     max-height: 150px;
 }
+
+input#areaDisplay {
+    margin-top: 10px; 
+    padding: 10px; 
+    font-size: 16px; 
+    border-radius: 5px; 
+    border: 1px solid #ccc; 
+}
