style for the percentahe of world population section

--- a/index_layout.css
+++ b/index_layout.css
@@ -70,3 +70,7 @@ input#pDensityDisplay {
     border-radius: 5px; 
     border: 1px solid  #ccc; 
 }
+
+h2.populationPer{
+    margin-top: 15px; 
+}
