--- a/index_layout.css
+++ b/index_layout.css
@@ -1,8 +1,58 @@
 @charset "utf-8";
 
+
+/* header */
+
+.header{
+    overflow: hidden;
+    background-color: rgb(74, 145, 190);
+    padding: 20px 10px;
+}
+
+.header a {
+    float: left;
+    color:black;
+    text-align: center;
+    padding: 12px;
+    text-decoration: none;
+    font-size: 18px;
+    line-height: 25px;
+    border-radius: 6px;
+}
+
+.header a.logo {
+    background-color: rgb(31, 39, 39);
+    color: #fff;
+}
+
+.header a:hover{
+    background-color: #ddd;
+    color:black;
+}
+
+.header-right{
+    float:right;
+}
+
+@media screen and (max-width: 500px) {
+    .header a {
+        float: none;
+        display: block;
+        text-align: left;
+    }
+
+    .header-right{
+        float: none;
+    }
+}
+
+
+
+
 body{
     font-family: Arial, Helvetica, sans-serif; 
     font-size: 16px; 
+    margin: 0;
 }
 
 h2.center-top {
