--- a/index_layout.css
+++ b/index_layout.css
@@ -2,99 +2,86 @@
 
 
 /* header */
-
-.header{
-    overflow: hidden;
-    background-color: rgb(74, 145, 190);
-    padding: 20px 10px;
-}
-
-.header a {
-    float: left;
-    color:black;
+.header {
+    grid-area: header; 
+    background-color: rgb(243, 243, 243);
+    padding: 30px;
     text-align: center;
-    padding: 12px;
-    text-decoration: none;
-    font-size: 18px;
-    line-height: 25px;
-    border-radius: 6px;
+    font-size: 35px;
 }
 
-.header a.logo {
-    background-color: rgb(31, 39, 39);
-    color: #fff;
+/* the grid container */
+.grid-container {
+    display: grid; 
+    grid-template-areas: 
+    'header header header header header header'
+    'left middle middle middle middle right'
+    'footer footer footer footer footer footer';
+    /* grid- column-gap: 10px; - if you want gap between the columns */
 }
 
-.header a:hover{
-    background-color: #ddd;
-    color:black;
+
+.left,
+.middle,
+.right {
+    padding: 10px;    
 }
 
-.header-right{
-    float:right;
+/* Style the left column */
+.left{
+    grid-area: left;
 }
 
-@media screen and (max-width: 500px) {
-    .header a {
-        float: none;
-        display: block;
-        text-align: left;
+/* Style the middle column */
+.middle {
+    grid-area: middle;
+}
+
+/* Style the right column */
+.right {
+    grid-area: right;
+}
+
+/* Style the footer */
+.footer{
+    grid-area: footer;
+    background-color: beige;
+    padding: 10px;
+    text-align: center;
+
+}
+
+/* Responsibe layout - makes the three columns stack on top of each other instead of next to each other */
+@media (max-width: 600px){
+    .grid-container{
+        grid-template-areas: 
+        'header header header header header header'
+        'left left left left left left'
+        'middle middle middle middle middle'
+        'right right right right right right'
+        'footer footer footer footer footer footer';
     }
-
-    .header-right{
-        float: none;
-    }
 }
 
 
-
-
-body{
-    font-family: Arial, Helvetica, sans-serif; 
-    font-size: 16px; 
-    margin: 0;
+.card-container {
+    display: flex;
+    justify-content: space-between;
+    margin: 30px;
+    padding: 2px 16px;
 }
 
-h2.center-top {
-    text-align: center; 
-    padding: 40px
-}
-
-label.countrylist {
-    font-weight: bold; 
-    display: block; 
-    margin-bottom: 10px;
-    
-}
-
-select.list {
-    padding: 10px; 
-    font-size: 16px; 
-    border-radius: 5px; 
+.card1,
+.card2 {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    flex: 1 0 auto;
+    margin: 10px;
+    padding: 20px;
     border: 1px solid #ccc;
-    
-}
-
-label.topleft {
-    font-weight: bold; 
-    display: block; 
-    margin-top: 20px; 
-    
-}
-
-label.topRight {
-
-    font-weight: bold; 
-    display: block; 
-    margin-top: 20px; 
-     
-}
-
-#flagImg { 
-    
-    margin-top: 20px;
-    
-    
+    border-radius: 10px;
+    transition: 0.3s;
+    width: 40%;
+    background-color: cornflowerblue;
 }
 
 #flagImage {
@@ -102,110 +89,6 @@ label.topRight {
     max-height: 150px;
 }
 
-input#areaDisplay {
-    margin-top: 5px; 
-    padding: 3px; 
-    font-size: 12px; 
-    border-radius: 5px; 
-    border: 1px solid #ccc; 
-    
-}
 
-h2.popDen { 
-    margin-top: 25px;
-}
-
-input[name="pUnitSelection"] {
-    margin-right: 10px; 
-}
-
-input#pDensityDisplay {
-    margin-top: 5px; 
-    padding: 3px; 
-    font-size: 16px; 
-    border-radius: 5px; 
-    border: 1px solid  #ccc; 
-}
-
-h2.populationPer{
-    margin-top: 15px; 
-}
-
-input#pPercentDisplay { 
-    margin-top: 10px; 
-    padding: 5px; 
-    font-size: 12px; 
-    border-radius: 5px; 
-    border: 1px solid #ccc; 
-}
-
-#wikiPageLink {
-    text-align: center; 
-    text-decoration: none; 
-    font-weight: bold;
-}
-
-
-.button{
-    margin: 20px;
-    text-align: center;
-
-}
-
-.Wiki-button {
-    border-radius: 4px;
-    background-color: rgb(53, 114, 114);
-    border: none;
-    color: #fff;
-    text-align: center; 
-    font-size: 22px;
-    padding: 16px;
-    width:220px; 
-    transition: all 0.5s; 
-    cursor: pointer; 
-    margin: 36px;
-    box-shadow: 0 10px 20px -8px rgba(0,0,0,.7); 
-}
-
-.Wiki-button{
-    cursor: pointer;
-    display: inline-block; 
-    position: relative; 
-    transition: 0.5s;
-}
-
-.Wiki-button:after {
-    content: '>>';
-    position: absolute;
-    opacity: 0;
-    top: 14px;
-    right: -20px;
-    transition: 0.5s;
-}
-
-.Wiki-button:hover {
-    padding-right: 24px;
-    padding-left:8px;
-}
-
-.Wiki-button:hover:after {
-    opacity: 1;
-    right: 10px;
-}
-
-
-.parent{
-    margin: 1rem;
-    padding: 2rem 2rem;
-    text-align: center;
-}
-
-.article-1, .article-2{
-    display: inline-block;
-    border: 1px solid red;
-    padding: 1rem 1rem;
-    vertical-align: middle;
-
-}
-
-
+ 
+  
