--- a/index_layout.css
+++ b/index_layout.css
@@ -6,16 +6,39 @@ html, body {
     margin: 0;
     padding: 0;
     min-height: 100%;
+    font: 15px Arial, sans-serif;
 }
 
 /* Header */
 .header {
     grid-area: header;
-    background-color: rgb(243, 243, 243);
+    background-color: rgba(246, 237, 227, 0.908);
     padding: 30px;
     text-align: center;
     font-size: 35px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
+
+
+.center-top{
+    
+        font-size: 73px;
+        text-transform: uppercase;
+        font-family: 'Gambetta', serif;
+        letter-spacing: -3px;
+        transition: 700ms ease;
+        font-variation-settings: "wght" 311;
+        margin-bottom: 0.8rem;
+        color: rgba(164, 155, 56, 0.892);
+        outline: none;
+        text-align: center;
+}
+
+.center-top:hover {
+    font-variation-settings: "wght" 582; 
+    letter-spacing: 1px;
+}
+
 
 /* the grid container */
 .grid-container {
@@ -40,28 +63,41 @@ html, body {
 /* Style the left column */
 .left {
     grid-area: left;
-    background-color: antiquewhite;
+    background-color: rgb(23, 50, 87);
 }
 
 /* Style the middle column */
 .middle {
     grid-area: middle;
-    background-color: burlywood;
+    background-color: rgb(88, 148, 208);
+    background: url("../background-image/books.jpg") no-repeat center; 
+    Height:100%;
 }
 
 /* Style the right column */
 .right {
     grid-area: right;
-    background-color: antiquewhite;
+    background-color: rgb(23, 50, 87);
 }
 
 /* Style the footer */
 .footer {
     grid-area: footer;
-    background-color: beige;
+    background-color:  rgba(246, 237, 227, 0.908);
     padding: 10px;
     text-align: center;
     min-height: 100px; /* Adjust this value according to your design */
+}
+
+.area,
+.Population,
+.pDensityDisplay,
+.populationDisplay,
+.unit,
+.list
+{
+  box-shadow:inset 0 0 5px 5px #b1acacab;
+  background: #ffffff;
 }
 
 /* Card container */
@@ -74,16 +110,19 @@ html, body {
 
 .card1,
 .card2 {
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     flex: 1 0 auto;
     margin: 10px;
     padding: 30px;
-    border: 1px solid #ccc;
+    border: 1px solid #ede8e8;
     border-radius: 10px;
     transition: 0.3s;
     width: 40%;
     text-align: center;
-    background-color: rgb(176, 187, 209);
+    background-color: rgb(93, 96, 99);
+    color: white;
+    backdrop-filter: blur(30px);
+    background-color: rgba(255, 255, 255, 0.084); 
 }
 
 .card2:hover {
@@ -97,6 +136,7 @@ html, body {
 #flagImage {
     max-width: 200px; 
     max-height: 150px;
+    box-shadow: 0 10px 20px -8px rgba(0,0,0,.7);
 }
 
 /* wiki button */
@@ -113,6 +153,7 @@ html, body {
     cursor: pointer; 
     margin: 36px;
     box-shadow: 0 10px 20px -8px rgba(0,0,0,.7); 
+    font:  Arial, sans-serif;
 }
 
 .Wiki-button {
@@ -142,7 +183,7 @@ html, body {
 }
 
 /* Responsive styles */
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 725px) {
     .grid-container {
         grid-template-areas: 
             'header'
