update: minor adjustment made

--- a/index_layout.css
+++ b/index_layout.css
@@ -87,6 +87,7 @@ html, body {
     padding: 10px;
     text-align: center;
     min-height: 100px; /* Adjust this value according to your design */
+    color:#717070d2;
 }
 
 .area,
